# iron-to-iron

./: ABSTRACTION.md  CHARTER.md  I2I-V3-SPEC.md  README.md  SPEC-v2-draft.md  SPEC.md  STATE.md  __main__.py  iron_to_iron.py  pyproject.toml
c/: bottle-cli.c
docs/: TOM-SAWYER-PROTOCOL.md
docs/examples/: README.md  cynic-reviews-isa-v2.md  sage-reviews-cynic.md
docs/getting-started/: README.md
docs/incubation/: README.md  flux-claw-first.md  hav-integration.md  synthesis-economy.md
docs/philosophy/: README.md  expansion-ideas.md
docs/research/: README.md  ra-backward-chain.md  ra-irreversible-moves.md  ra-ranked-backlog.md  ra-vision-2036.md  roundtable-dispute-patterns.md
protocol/: README.md  autobiography-protocol.md  branch-strategy.md  code-review.md  commit-conventions.md  dispute-resolution.md  message-types.md  security-considerations.md  tombstone-protocol.md  vocab-signaling.md
schemas/: README.md  agent-manifest.schema.json  argument.schema.json  autobiography.schema.json  code-review.schema.json  commit-message.schema.json  tombstone.schema.json  vocab-signal.schema.json
src/i2i_v2/: __init__.py  bus.py  exceptions.py  message.py  message_types.py
templates/agent-repo/: README.md.template  tombstones.json.template
tests/: conftest.py  test_i2i_resolve_real.py  test_i2i_review_real.py  test_i2i_signal.py  test_i2i_signal_real.py  test_i2i_v2.py  test_schemas.py
tools/: README.md  i2i-commit.sh  i2i-init.sh  i2i-resolve.py  i2i-review.py  i2i-signal.py  i2i_messages.py
vocabularies/: README.md  i2i-protocol.ese
(+13 files in other folders)
